templates: add title

--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -1,10 +1,9 @@
 {{ define "title" }}博客{{ end }}
 
 {{ define "headcss" }}
-{{$.Scratch.Set "nav_active" "blog"}}
-{{$.Scratch.Set "data_i18_cn" true }}
-{{$.Scratch.Set "data_i18_link" "/blog" }}
-
+  {{$.Scratch.Set "nav_active" "blog"}}
+  {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "data_i18_link" "/blog" }
 {{ end }}
 
 {{ define "main" }}
