--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -1,20 +1,24 @@
+{{ define "title" }}关于{{ end }}
+
 {{ define "headcss" }}
-{{$.Scratch.Set "nav_active" "about"}}
-{{$.Scratch.Set "data_i18_cn" true }}
-{{$.Scratch.Set "data_i18_link" "/about" }}
+  {{$.Scratch.Set "nav_active" "about"}}
+  {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "data_i18_link" "/about" }}
 
-<style type="text/css" media="screen">
-  .amap-logo,
-  .amap-copyright {
-    display: none!important;
-  }
+  <style type="text/css" media="screen">
+    .amap-logo,
+    .amap-copyright {
+      display: none!important;
+    }
 
-  .amap-icon img {
-    width: 100%;
-    height: 100%;
-  }
-</style>
-{{ end }} {{ define "footjs" }}
+    .amap-icon img {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+{{ end }}
+
+{{ define "footjs" }}
 <script type="text/javascript" src='https://webapi.amap.com/maps?v=1.3&key=5943f0161bc8beb9f40b4f652faf648f&callback=init'></script>
 <script type="text/javascript">
 function init() {
@@ -35,7 +39,9 @@ function init() {
   })
 }
 </script>
-{{ end }} {{ define "main" }}
+{{ end }}
+
+{{ define "main" }}
 <!-- Todo merge zh and en with single layout with diff i18 front matter  -->
 <!-- TODO: video  -->
 <section class="about-intro-video">
