--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -1,3 +1,5 @@
+{{ define "title" }}About{{ end }}
+
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
 {{$.Scratch.Set "data_i18_link" "/about-cn" }}
