--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -1,27 +1,29 @@
+{{ define "title" }}首页{{ end }}
+
 {{ define "headcss" }}
-{{$.Scratch.Set "data_i18_cn" true }}
-{{$.Scratch.Set "data_i18_link" "/en" }}
-<style type="text/css" media="screen">
-    body {
-        background-image: linear-gradient(to top, #080000, #100f2e) !important;
-        color: #fff !important;
-    }
+  {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "data_i18_link" "/en" }}
+  <style type="text/css" media="screen">
+      body {
+          background-image: linear-gradient(to top, #080000, #100f2e) !important;
+          color: #fff !important;
+      }
 
-    body p {
-      font-family: 'Lato Light' !important;
-      font-weight: 300 !important;
-    }
+      body p {
+        font-family: 'Lato Light' !important;
+        font-weight: 300 !important;
+      }
 
-    header {
-        position: fixed;
-        background-color: rgba(0, 0, 0, 0) !important;
-        z-index: 99;
-    }
+      header {
+          position: fixed;
+          background-color: rgba(0, 0, 0, 0) !important;
+          z-index: 99;
+      }
 
-    header.fixed-top {
-        background-color: rgba(0, 0, 0, 0.9) !important;
-    }
-</style>
+      header.fixed-top {
+          background-color: rgba(0, 0, 0, 0.9) !important;
+      }
+  </style>
 {{ end }}
 
 {{ define "main" }}
