--- a/layouts/recruit-cn/list.html
+++ b/layouts/recruit-cn/list.html
@@ -1,8 +1,9 @@
+{{ define "title" }}招聘{{ end }}
+
 {{ define "headcss" }}
-{{$.Scratch.Set "nav_active" "about"}}
-{{$.Scratch.Set "data_i18_link" "/recruit" }}
-{{$.Scratch.Set "data_i18_cn" true }}
-<!-- <link href="/css/joblist.css" rel="stylesheet"> -->
+  {{$.Scratch.Set "nav_active" "about"}}
+  {{$.Scratch.Set "data_i18_link" "/recruit" }}
+  {{$.Scratch.Set "data_i18_cn" true }}
 {{ end }}
 
 {{ define "main" }}
