--- a/layouts/recruit-cn/single.html
+++ b/layouts/recruit-cn/single.html
@@ -1,8 +1,9 @@
+{{ define "title" }}招聘{{ end }}
+
 {{ define "headcss" }}
-{{$.Scratch.Set "nav_active" "about"}}
-{{$.Scratch.Set "data_i18_cn" true }}
-{{$.Scratch.Set "data_i18_link" "/recruit" }}
-<!-- <link href="/css/recruit.css" rel="stylesheet"> -->
+  {{$.Scratch.Set "nav_active" "about"}}
+  {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "data_i18_link" "/recruit" }}
 {{ end }}
 
 {{ define "main" }}
