--- a/layouts/recruit/single.html
+++ b/layouts/recruit/single.html
@@ -1,7 +1,8 @@
+{{ define "title" }}Recruit{{ end }}
+
 {{ define "headcss" }}
-{{$.Scratch.Set "nav_active" "about"}}
-{{$.Scratch.Set "data_i18_link" "/recruit-cn" }}
-<!-- <link href="/css/recruit.css" rel="stylesheet"> -->
+  {{$.Scratch.Set "nav_active" "about"}}
+  {{$.Scratch.Set "data_i18_link" "/recruit-cn" }}
 {{ end }}
 
 {{ define "main" }}
