--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -1,3 +1,5 @@
+{{ define "title" }} Doc {{ end }}
+
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "docs"}}
   {{$.Scratch.Set "data_i18_cn" true }}
