--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,3 +1,5 @@
+{{ define "title" }} 文档 {{ end }}
+
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "docs"}}
   {{$.Scratch.Set "data_i18_link" "/docs-cn" }}
