--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -3,7 +3,7 @@
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "blog"}}
   {{$.Scratch.Set "data_i18_cn" true }}
-  {{$.Scratch.Set "data_i18_link" "/blog" }
+  {{$.Scratch.Set "data_i18_link" "/blog" }}
 {{ end }}
 
 {{ define "main" }}
