content: fixed TOC in recruit

--- a/layouts/recruit-cn/list.html
+++ b/layouts/recruit-cn/list.html
@@ -12,9 +12,9 @@
         <div class="nav nav-tags">
             <h1 class="title">职位类型</h1>
             <ul class="tag-list">
-              {{ range .Data.Pages.GroupByParam "tags" }}
+              {{ range .Site.Data.recruit_cn_toc }}
               <!-- Todo sel active class -->
-              <li><a href="" class="tag"> {{ .Key }} ({{ len .Pages }})</a></li>
+              <li><a href="" class="tag"> {{ .name }} ({{ len .children }})</a></li>
               {{ end }}
             </ul>
         </div>
