--- a/layouts/recruit/list.html
+++ b/layouts/recruit/list.html
@@ -11,9 +11,9 @@
         <div class="nav nav-tags">
             <h1 class="title">Job Categories</h1>
             <ul class="tag-list">
-              {{ range .Data.Pages.GroupByParam "tags" }}
-              <!-- TODO sel active class -->
-              <li><a href="" class="tag"> {{ .Key }} ({{ len .Pages }})</a></li>
+              {{ range .Site.Data.recruit_toc }}
+              <!-- Todo sel active class -->
+              <li><a href="" class="tag"> {{ .name }} ({{ len .children }})</a></li>
               {{ end }}
             </ul>
         </div>
