feat: prepare related layout templates for blog and weekly section

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -9,7 +9,7 @@
     <div class="nav nav-tree" id="st-tree">
       <h1 class="title"> Blog </h1>
       <div class="st_tree" id="doc-nav">
-        {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil }}
+        {{ $blogs := where (where .Site.Pages "Section" "blog") ".Params.title" "!=" nil }}
         <ul>
           {{ range $blogs.GroupByDate "2006" }}
           <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
