--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -1,17 +1,18 @@
-{{ define "title" }}Blog{{ end }}
+{{ define "title" }}博客{{ end }}
 
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "blog"}}
-  {{$.Scratch.Set "data_i18_link" "/blog-cn" }}
+  {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "data_i18_link" "/blog" }}
 {{ end }}
 
 {{ define "main" }}
 <div class="blog">
     <div class="container">
         <div class="nav nav-tags">
-          {{ $posts := where (where .Site.Pages "Section" "blog") ".Params.title" "!=" nil  }}
-            <h1 class="title">热门标签 <a class="rss" href="/rss/feed.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
-            <a href="/bloglist-zh.html" class="all">ALL ({{ len $posts }})</a>
+          {{ $posts := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil  }}
+            <h1 class="title">热门标签 <a class="rss" href="/rss/feed-cn.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
+            <a href="" class="all">ALL ({{ len $posts }})</a>
             <div class="tag-list">
                     <!-- Get all posts-->
                   <!-- loop all tags that you've used -->
