--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,5 +1,6 @@
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "docs"}}
+  {{$.Scratch.Set "data_i18_link" "/docs-cn" }}
 {{ end }}
 
 {{ define "main" }}
@@ -16,6 +17,8 @@
         <div class="content">
           {{ .Content }}
         </div>
+
+        {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
 
         <div class="draw">
           <img src="https://download.pingcap.com/images/docs-simple.png" width="100%">
