feat: 优化 docs/docs-cn i18n 相互 reference 链接到对应文档路径 url

--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -1,7 +1,10 @@
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "docs"}}
   {{$.Scratch.Set "data_i18_cn" true }}
-    {{$.Scratch.Set "data_i18_link" "/docs" }}
+  {{$v0 := (strings.TrimPrefix "docs-cn/" .File.Path )}}
+  {{$v1 := (strings.TrimSuffix ".md" $v0 )}}
+  {{$v := (printf "%s%s" "/docs/" $v1)}}
+  {{$.Scratch.Set "data_i18_link" $v }}
 {{ end }}
 
 {{ define "main" }}
