--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -17,7 +17,10 @@
     </div>
 
       <div class="archive">
-          <div class="content">{{ readFile "/content/docs-cn/overview.md" | markdownify }}</div>
+          <div class="content">
+            {{ with .Site.GetPage "page" "docs-cn/overview.md" }}{{.Content}}{{ end }}
+
+          </div>
 
           <div class="draw">
             <img src="https://download.pingcap.com/images/docs-simple.png" width="100%">
