styles and templates: update improve-doc

--- a/layouts/partials/search/ui.html
+++ b/layouts/partials/search/ui.html
@@ -1,28 +1,5 @@
 <style>
     /* List of search results */
-    /*.aa-dropdown-menu {
-        box-sizing: border-box;
-        width: 100%;
-        background-color: #FFFFFF;
-        border: 1px solid #B3B3B3;
-        padding: 0;
-        font-size: 16px;
-        margin: 4 0 4 0;
-    }*/
-    /* Currently selected search result */
-    /*.aa-cursor .algolia-docsearch-suggestion--content {
-        color: inherit;
-    }
-
-    .aa-cursor .algolia-docsearch-suggestion {
-        background: #EFEFEF;
-        color: #353B44;
-    }
-
-    .algolia-docsearch-suggestion {
-        font-size: 16px;
-        color: #9AA2AB;
-    }*/
 
     .algolia-autocomplete .ds-dropdown-menu {
         position: relative;
@@ -38,17 +15,20 @@
     }
 
     .algolia-autocomplete .algolia-docsearch-suggestion {
-        position: relative;
-        padding: 0;
+        padding: 0 4px!important;
+    }
+
+    .algolia-autocomplete .algolia-docsearch-suggestion--wrapper {
+        padding: 4px 0 0!important;
     }
 
     .algolia-autocomplete .algolia-docsearch-suggestion .algolia-docsearch-suggestion--category-header {
-        position: relative;
         border-bottom: 1px solid #ddd;
         margin: 0;
-        padding: 4px 8px;
+        padding: 2px 8px;
         text-transform: uppercase;
         color: #3a59f0;
+        font-size: 0.9em;
     }
 
     .algolia-docsearch-suggestion.algolia-docsearch-suggestion__secondary .algolia-docsearch-suggestion--subcategory-column {
@@ -64,8 +44,8 @@
             left: auto!important;
             right: 1rem!important;
             width: 300px;
-            max-width: calc(100%-2rem);
-            max-height: calc(100%-5rem);
+            max-width: calc(100% - 2rem);
+            max-height: calc(100% - 5rem);
         }
     }
 
