--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -198,6 +198,17 @@
       }
     }
   }
+
+  .improve-doc {
+    display: flex;
+    margin: 1rem 0;
+    color: @theme_blue;
+    font-size: 0.8rem;
+
+    svg {
+      margin-right: 0.5rem;
+    }
+  }
 }
 
 @media (max-width: 768px) {
