--- a/layouts/partials/improve-doc.html
+++ b/layouts/partials/improve-doc.html
@@ -1,3 +1,4 @@
-<a href="https://github.com/pingcap/{{.repo}}/edit/master/{{strings.TrimPrefix .repo .global.File.Path}}" class="" target="_blank">
+<a href="https://github.com/pingcap/{{.repo}}/edit/master/{{strings.TrimPrefix .repo .global.File.Path}}" class="improve-doc" target="_blank">
+  {{ partial "svgs/icon-edit.svg" (dict "fill" "#3a59f0" "width" 20 "height" 20 ) }}
   {{ if .isCn }}修改文档{{else}}Improve this page{{end}}
 </a>
