--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -33,7 +33,7 @@
     -moz-transition: opacity 0.25s;
     transition: opacity 0.25s;
 
-    .title {
+    .inner-title {
       display: inline-block;
       position: absolute;
       bottom: 50%;
@@ -69,7 +69,7 @@
     .text {
       opacity: 1;
 
-      .title {
+      .inner-title {
         opacity: 1;
         -webkit-transform: translate3d(0, 0, 0);
         -moz-transform: translate3d(0, 0, 0);
@@ -200,7 +200,7 @@ section[class^='meetup-landingpage-'] {
   .text {
     padding: 30px 70px;
 
-    .title {
+    .inner-title {
       letter-spacing: 4px;
       bottom: 30px;
       right: 70px;
@@ -215,7 +215,7 @@ section[class^='meetup-landingpage-'] {
 .meetup-landingpage-review {
   .details {
     .item {
-      max-width: 30%;
+      flex-basis: 30%;
     }
     .layout-text-on-hover {
       .text {
@@ -308,5 +308,11 @@ section[class^='meetup-landingpage-'] {
     width: 95%;
     height: auto;
     margin: 0 auto;
+  }
+}
+
+@media (max-width: 600px) {
+  section[class^='meetup-landingpage-'] .details .item {
+    flex-basis: 100%;
   }
 }
