chore: update single.html's side menu with nested ul/li element

--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -9,21 +9,25 @@
     <div class="container">
         <div class="nav nav-tree" id="st-tree">
             <h1 class="title"> 博客 </h1>
-            <div class="st_tree" id="doc-nav">
+            <div class="st_tree" id="st_tree">
                 {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil }}
                 <ul>
                     {{ range $blogs.GroupByDate "2006" }}
-                    <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
-                    <ul>
-                        {{ range .Pages.GroupByDate "2006-01" }}
-                        <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
-                        <ul>
-                            {{ range .Pages }}
-                            <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
-                            {{ end }}
-                        </ul>
-                        {{ end }}
-                    </ul>
+                    <li>
+                      <a href="#">{{ .Key }} ({{ len .Pages }})</a>
+                      <ul>
+                          {{ range .Pages.GroupByDate "2006-01" }}
+                          <li>
+                            <a href="#">{{ .Key }} ({{ len .Pages }})</a>
+                            <ul>
+                                {{ range .Pages }}
+                                <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
+                                {{ end }}
+                            </ul>
+                          </li>
+                          {{ end }}
+                      </ul>
+                    </li>
                     {{ end }}
                 </ul>
             </div>
