--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -8,21 +8,25 @@
   <div class="container">
     <div class="nav nav-tree" id="st-tree">
       <h1 class="title"> Blog </h1>
-      <div class="st_tree" id="doc-nav">
+      <div class="st_tree" id="st_tree">
         {{ $blogs := where (where .Site.Pages "Section" "blog") ".Params.title" "!=" nil }}
         <ul>
           {{ range $blogs.GroupByDate "2006" }}
-          <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
-          <ul>
-            {{ range .Pages.GroupByDate "2006-01" }}
-            <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
+          <li>
+            <a href="#">{{ .Key }} ({{ len .Pages }})</a>
             <ul>
-              {{ range .Pages }}
-              <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
+              {{ range .Pages.GroupByDate "2006-01" }}
+              <li>
+                <a href="#">{{ .Key }} ({{ len .Pages }})</a>
+                <ul>
+                  {{ range .Pages }}
+                  <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
+                  {{ end }}
+                </ul>
+              </li>
               {{ end }}
             </ul>
-            {{ end }}
-          </ul>
+          </li>
           {{ end }}
         </ul>
       </div>
