--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,16 +1,14 @@
 {{ define "main" }}
 <div class="doc">
   <div class="container">
-      <div class="list">
-          <section class="item">
-              <div class="content">
-                  <div class="error">
-                      <h1>Sorry... 404!</h1>
-                      <p>The page you were looking for appears to have been moved, deleted or does not exist. You could go back to <a href="javascript:history.back();"><span class="go-back">where you were</span></a> or head straight to our <a href="/">home page</a></p>
-                  </div>
-              </div>
-          </section>
+    <div class="archive">
+      <div class="content">
+        <div class="error">
+           <h1>Sorry... 404!</h1>
+           <p>The page you were looking for appears to have been moved, deleted or does not exist. You could go back to <a href="javascript:history.back();"><span class="go-back">where you were</span></a> or head straight to our <a href="/">home page</a></p>
+        </div>
       </div>
+    </div>
   </div>
 </div>
 {{ end }}
