--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -14,8 +14,8 @@
 
     img {
       width: 100%;
-      height: auto;
-      vertical-align: middle;
+      height: 100%;
+      // vertical-align: middle;
     }
   }
 
