--- a/src/less/style.less
+++ b/src/less/style.less
@@ -3,3 +3,10 @@
 @import './meetup.less';
 @import './doc.less';
 @import './list.less';
+
+.nav-tree .st_tree {
+  .folder:before,
+  .open:before {
+    top: 10px;
+  }
+}
