--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -11,25 +11,7 @@
       <h1 class="title"> 干货实录 </h1>
       <div class="st_tree" id="doc-nav">
         {{ $blogs := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil }}
-        <ul>
-          {{ range $blogs.GroupByDate "2006" }}
-          <li>
-            <a href="#">{{ .Key }} ({{ len .Pages }})</a>
-            <ul>
-              {{ range .Pages.GroupByDate "2006-01" }}
-              <li>
-                <a href="#">{{ .Key }} ({{ len .Pages }})</a>
-                <ul>
-                  {{ range .Pages }}
-                  <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
-                  {{ end }}
-                </ul>
-              </li>
-              {{ end }}
-            </ul>
-          </li>
-          {{ end }}
-        </ul>
+        {{ partial "date-tree-nav.html" (dict "data" $blogs) }}
       </div>
     </div>
 
