templates: fixed nav_active

--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -3,10 +3,11 @@
     <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
     {{ $nav_active := $.Scratch.Get "nav_active" }}
     <ul class="navigations">
-      <li class="{{if eq $nav_active " doc "}}sel{{end}}"><a href="/docs-cn">文档</a></li>
-      <li class="{{if eq $nav_active " blog "}}sel{{end}}"><a href="/blog-cn">博客</a></li>
-      <li class="{{if eq $nav_active " meetup "}}sel{{end}}"><a href="/meetup">Meetup</a></li>
-      <li class="{{if eq $nav_active " about "}}sel{{end}}"><a href="/about-cn">关于</a></li>
+
+      <li {{ if eq $nav_active "doc"}}class="sel"{{end}}><a href="/docs-cn">文档</a></li>
+      <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
+      <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li>
+      <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
       <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh"> 下载 </a></li>
     </ul>
      {{ partial "search/ui.html" . }}
