--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -12,6 +12,7 @@
 /** documentation list **/
 .doc,
 .blog,
+.weekly,
 .meetup,
 .recruit {
   padding: calc(~'1rem + @{header_height}') @horizontal_padding;
@@ -180,8 +181,8 @@
       margin: 2rem 0 1rem;
     }
     .operate {
-      padding: 1rem 0;
-      margin: 1rem 0;
+      // padding: 1rem 0;
+      margin-top: 4rem;
       border-top: 2px solid #000;
       display: flex;
       flex-flow: row wrap;
@@ -191,6 +192,7 @@
       .item a {
         display: flex;
         align-items: center;
+        margin-top: 1rem;
         font-size: 0.75rem;
         .icon {
           margin-right: 0.5rem;
@@ -221,6 +223,7 @@
   .doc,
   .blog,
   .meetup,
+  .weekly,
   .recruit {
     .container {
       flex-direction: column;
