--- a/src/less/list.less
+++ b/src/less/list.less
@@ -7,6 +7,7 @@
 @nav_tags_width: 16rem;
 
 .blog,
+.weekly,
 .meetup,
 .recruit {
   .nav-tags {
@@ -154,5 +155,11 @@
         transform: scale(1);
       }
     }
+  }
+}
+
+.weekly {
+  .list {
+    flex-basis: 100%;
   }
 }
