--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -1,43 +1,13 @@
 {{ define "title" }}博客{{ end }}
 
 {{ define "headcss" }}
-  {{$.Scratch.Set "nav_active" "blog"}}
-  {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "nav_active" "weekly"}}
   {{$.Scratch.Set "data_i18_link" "/blog" }}
 {{ end }}
 
 {{ define "main" }}
-<div class="blog">
+<div class="weekly">
     <div class="container">
-        <div class="nav nav-tags">
-          {{ $posts := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil  }}
-            <h1 class="title">热门标签 <a class="rss" href="/rss/feed-cn.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
-            <a href="" class="all">ALL ({{ len $posts }})</a>
-            <div class="tag-list">
-                    <!-- Get all posts-->
-                  <!-- loop all tags that you've used -->
-                  <!-- {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                    <!-- (re)set the counter to 0 -->
-                    {{ $.Scratch.Set "tagCounter" 0 }}
-                    <!-- increment counter if post contains the current tag-->
-                    <!-- tag name: {{ $name }}, {{$taxonomy}} -->
-                    {{ range $posts}}
-                    <!-- Post tags: {{.Params.tags}} -->
-                      {{ if in .Params.tags $name }}
-                        {{ $.Scratch.Add "tagCounter" 1 }}
-                      {{ end }}
-                    {{ end }}
-                    <!-- {{ $name }} -->
-                        {{ if $.Scratch.Get "tagCounter" }}
-                        <!-- hide class for li, if less then 2 -->
-                          <!-- <li class=""> -->
-                            <a href="{{ $name }}" class="tag">
-                              {{ $name }} ({{ $.Scratch.Get "tagCounter" }})</a>
-                          <!-- </li> -->
-                        {{ end }}
-                  <!-- {{end}} -->
-            </div>
-        </div>
         <div class="list">
             {{ range .Data.Pages.ByDate.Reverse }}
               <!-- <li><h2>{{ .Title }}</h2></li> -->
