templates and styles: update weekly list page and fixed header

--- a/layouts/meetup/list.html
+++ b/layouts/meetup/list.html
@@ -1,4 +1,11 @@
-{{ define "title" }}Meetup{{ end }} {{ define "headcss" }} {{$.Scratch.Set "nav_active" "meetup"}} {{$.Scratch.Set "data_i18_cn" true }} {{ end }} {{ define "main" }}
+{{ define "title" }}Meetup{{ end }}
+
+{{ define "headcss" }}
+  {{$.Scratch.Set "nav_active" "meetup"}}
+  {{$.Scratch.Set "data_i18_cn" true }}
+{{ end }}
+
+{{ define "main" }}
 <section class="meetup-landingpage-banner layout-text-on-hover">
     <!-- TODO: sign up url -->
     <a href="http://path/to/signup" class="link-abs" target="_blank"></a>
