--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,13 +2,13 @@
   <nav class="container">
     <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
     {{ $nav_active := $.Scratch.Get "nav_active" }}
-    <ul class="navigations">
-      <li class="{{if eq $nav_active " doc "}}sel{{end}}"><a href="/docs">Doc</a></li>
-      <li class="{{if eq $nav_active " blog "}}sel{{end}}"><a href="/blog">Blog</a></li>
-      <li class="{{if eq $nav_active " weekly "}}sel{{end}}"><a href="/weekly">Weekly</a></li>
-      <li class="{{if eq $nav_active " about "}}sel{{end}}"><a href="/about">About</a></li>
-      <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh">Download</a></li>
-     </ul>
+      <ul class="navigations">
+        <li {{ if eq $nav_active "doc"}}class="sel"{{end}}><a href="/docs">Doc</a></li>
+        <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog">Blog</a></li>
+        <li {{ if eq $nav_active "weekly"}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
+        <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about">About</a></li>
+        <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment"> Download </a></li>
+      </ul>
      {{ partial "search/ui.html" . }}
   </nav>
 </header>
