--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -1,7 +1,5 @@
 {{ define "headcss" }}
-  {{$.Scratch.Set "nav_active" "blog"}}
-  {{$.Scratch.Set "data_i18_link" "/blog" }}
-  {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "nav_active" "weekly"}}
 {{ end }}
 
 {{ define "main" }}
