--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -12,7 +12,7 @@
         <div class="nav nav-tags">
           {{ $posts := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
             <h1 class="title">热门标签 <a class="rss" href="/rss/feed-cn.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
-            <a href="/bloglist-zh.html" class="all">ALL ({{ len $posts }})</a>
+            <a href="#" class="tag all sel">ALL ({{ len $posts }})</a>
             <div class="tag-list">
                     <!-- Get all posts-->
                   <!-- loop all tags that you've used -->
@@ -28,21 +28,22 @@
                       {{ end }}
                     {{ end }}
                     <!-- {{ $name }} -->
-                        {{ if $.Scratch.Get "tagCounter" }}
+                    {{ $count := $.Scratch.Get "tagCounter" }}
+                        {{ if (gt  $count 1) }}
                         <!-- hide class for li, if less then 2 -->
-                          <!-- <li class=""> -->
-                            <a href="{{ $name }}" class="tag">
+                          <!-- Todo unescape url -->
+                            <a href="#{{ $name| urlize }}" class="tag" data-tag="{{$name}}">
                               {{ $name }} ({{ $.Scratch.Get "tagCounter" }})</a>
                           <!-- </li> -->
                         {{ end }}
                   <!-- {{end}} -->
             </div>
         </div>
-        <div class="list">
+        <div class="list article-list">
             {{ range .Data.Pages.ByDate.Reverse }}
               <!-- <li><h2>{{ .Title }}</h2></li> -->
                 <!-- {{ .Render "li"}} -->
-            <div class="article">
+            <div class="article" data-tag="{{ range .Params.tags }}{{.}} {{ end }}">
                 <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
                 <ul class="blog-post-meta">
                     <li class="meta-item">
@@ -62,11 +63,10 @@
                     </li>
                     <li class="meta-item">
                       <ul id="tags">
-                          {{/*
-                              {{ range .Params.tags }}
-                                <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-                              {{ end }}
-                         */}}
+                          {{/* Comment Here */}}
+                          {{ range .Params.tags }}
+                            <a href="#{{ . | urlize }}" class="anchor-tag">{{ . }}</a>
+                          {{ end }}
                       </ul>
                     </li>
                 </ul>
