--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -21,6 +21,7 @@
         <div class="content">
           {{ .Content }}
         </div>
+        <div class="article-toc"></div>
 
         {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
 
