--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -151,10 +151,15 @@
       pre {
         padding: @horizontal_padding;
         background-color: @gray_white;
+        border: 1px solid #ccc;
         font-size: 0.7rem;
         line-height: 1.45;
         .rounded-corners();
         overflow: auto;
+        code {
+          word-break: break-all;
+          word-wrap: break-word;
+        }
       }
       .blog-post-meta {
         padding-left: 0;
