--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -15,7 +15,6 @@
     img {
       width: 100%;
       height: 100%;
-      // vertical-align: middle;
     }
   }
 
@@ -29,8 +28,6 @@
     background-color: rgba(242, 241, 241, 0.8);
     box-sizing: border-box;
     opacity: 0;
-    -webkit-transition: opacity 0.25s;
-    -moz-transition: opacity 0.25s;
     transition: opacity 0.25s;
 
     .inner-title {
@@ -41,10 +38,7 @@
       opacity: 0;
       font-size: 1.6rem;
       color: @dark-blue;
-      -webkit-transform: translate3d(40%, 0, 0);
-      -moz-transform: translate3d(40%, 0, 0);
       transform: translate3d(40%, 0, 0);
-      -webkit-transition: -webkit-transform 0s 0.2s, opacity 0.2s;
       transition: transform 0s 0.2s, opacity 0.2s;
 
       &:after {
@@ -56,10 +50,7 @@
         height: 10px;
         z-index: -1;
         background-color: @red;
-        -webkit-transform-origin: 0 50%;
         transform-origin: 0 50%;
-        -webkit-transform: scaleX(0);
-        -moz-transform: scaleX(0);
         transform: scaleX(0);
       }
     }
@@ -110,6 +101,7 @@ section[class^='meetup-landingpage-'] {
   p {
     margin: 2px auto;
     font-weight: 300;
+    font-size: 0.8rem;
   }
 
   .link {
