--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -10,7 +10,7 @@
         <div class="nav nav-tree">
             <h1 class="title"> Weekly </h1>
             <div class="st_tree" id="st_tree">
-                {{ $archives := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil }}
+                {{ $archives := where ( .Data.Pages ) ".Params.title" "!=" nil }}
                 {{ partial "date-tree-nav.html" (dict "data" $archives) }}
             </div>
         </div>
