--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -36,22 +36,21 @@
     h3,
     h4 {
       margin-bottom: 1rem;
-      font-family: 'TitilliumWeb';
       font-weight: 400;
       color: @title_color;
     }
 
     h1 {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
     }
     h2 {
-      font-size: 1.3rem;
-    }
-    h3 {
       font-size: 1.1rem;
     }
-    h4 {
+    h3 {
       font-size: 1rem;
+    }
+    h4 {
+      font-size: 0.9rem;
     }
   }
 
@@ -61,15 +60,15 @@
       ol,
       ul,
       table {
-        line-height: 1.8;
-        font-size: 0.8rem;
-        font-family: 'Lato';
+        line-height: 1.7;
+        font-size: 0.7rem;
+        // font-family: 'Lato';
         font-weight: 400;
       }
       b,
       optgroup,
       strong {
-        font-family: 'Lato';
+        // font-family: 'Lato';
         font-weight: 600;
       }
 
@@ -209,7 +208,7 @@
     display: flex;
     margin: 1rem 0;
     color: @theme_blue;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
 
     svg {
       margin-right: 0.5rem;
@@ -219,7 +218,7 @@
   .error {
     color: @theme_blue;
     line-height: 1.7;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
 }
 
