--- a/src/less/nav_tree.less
+++ b/src/less/nav_tree.less
@@ -14,11 +14,11 @@
   width: @nav_width;
   padding-right: @horizontal_padding;
   // padding-bottom: 1.2rem;
-  font-family: 'TitilliumWeb';
+  // font-family: 'TitilliumWeb';
 
   .title {
     margin-bottom: 1rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 400;
     color: #142848;
   }
@@ -37,7 +37,7 @@
       a {
         display: block;
         padding-left: 1.1rem;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         line-height: 1.5;
         color: #000;
       }
