templates: fixed nav_active for docs and docs-cn

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
     {{ $nav_active := $.Scratch.Get "nav_active" }}
       <ul class="navigations">
-        <li {{ if eq $nav_active "doc"}}class="sel"{{end}}><a href="/docs">Doc</a></li>
+        <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs">Docs</a></li>
         <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog">Blog</a></li>
         <li {{ if eq $nav_active "weekly"}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
         <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about">About</a></li>
