chore: add feed xml generate and add ref in template

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="nav nav-tags">
           {{ $posts := where (where .Site.Pages "Section" "blog") ".Params.title" "!=" nil  }}
-            <h1 class="title">热门标签 <a class="rss" href="/rss/feed.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
+            <h1 class="title">热门标签 <a class="rss" href="/blog/index.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
             <a href="/bloglist-zh.html" class="all">ALL ({{ len $posts }})</a>
             <div class="tag-list">
                     <!-- Get all posts-->
