template: fixed blog-cn nav-tag

--- a/src/less/list.less
+++ b/src/less/list.less
@@ -153,6 +153,11 @@
       &:hover:after {
         transform: scale(1);
       }
+
+      .link {
+        margin: 0 2px;
+        text-decoration: underline;
+      }
     }
   }
 }
