--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -9,75 +9,66 @@
 {{ define "main" }}
 <div class="blog">
     <div class="container">
+      {{ $posts := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
         <div class="nav nav-tags">
-          {{ $posts := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
             <h1 class="title">热门标签 <a class="rss" href="/rss/feed-cn.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
             <a href="#" class="tag all sel">ALL ({{ len $posts }})</a>
             <div class="tag-list">
-                    <!-- Get all posts-->
-                  <!-- loop all tags that you've used -->
-                  <!-- {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                    <!-- (re)set the counter to 0 -->
-                    {{ $.Scratch.Set "tagCounter" 0 }}
-                    <!-- increment counter if post contains the current tag-->
-                    <!-- tag name: {{ $name }}, {{$taxonomy}} -->
-                    {{ range $posts}}
+              <!-- Get all posts-->
+              <!-- loop all tags that you've used -->
+              {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
+                <!-- (re)set the counter to 0 -->
+                {{ $.Scratch.Set "tagCounter" 0 }}
+                <!-- increment counter if post contains the current tag-->
+                  {{ range $posts}}
                     <!-- Post tags: {{.Params.tags}} -->
-                      {{ if in .Params.tags $name }}
-                        {{ $.Scratch.Add "tagCounter" 1 }}
-                      {{ end }}
+                    {{ if in .Params.tags $name }}
+                      {{ $.Scratch.Add "tagCounter" 1 }}
                     {{ end }}
-                    <!-- {{ $name }} -->
-                    {{ $count := $.Scratch.Get "tagCounter" }}
-                        {{ if (gt  $count 1) }}
-                        <!-- hide class for li, if less then 2 -->
-                          <!-- Todo unescape url -->
-                            <a href="#{{ $name| urlize }}" class="tag" data-tag="{{$name}}">
-                              {{ $name }} ({{ $.Scratch.Get "tagCounter" }})</a>
-                          <!-- </li> -->
-                        {{ end }}
-                  <!-- {{end}} -->
+                  {{ end }}
+
+                  {{ $count := $.Scratch.Get "tagCounter" }}
+                  {{ if (gt  $count 1) }}
+                    <!-- hide class for li, if less then 2 -->
+                    <a href="#{{ $name| urlize }}" class="tag" data-tag="{{$name}}">
+                      {{ $name }} ({{ $.Scratch.Get "tagCounter" }})
+                    </a>
+                  {{ end }}
+              {{end}}
             </div>
         </div>
         <div class="list article-list">
-            {{ range .Data.Pages.ByDate.Reverse }}
-              <!-- <li><h2>{{ .Title }}</h2></li> -->
-                <!-- {{ .Render "li"}} -->
-            <div class="article" data-tag="{{ range .Params.tags }}{{.}} {{ end }}">
-                <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
-                <ul class="blog-post-meta">
-                    <li class="meta-item">
-                      {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
-                      {{ .Date.Format "2006-01-02" }}
-                    </li>
-                    <li class="meta-item">
-                       {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-                        {{/*
-                            <!-- {{ range .Params.author }}
-                              <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
-                            {{ end }} -->
-                            <!-- {{ range .Params.author }} {{ . }}  {{ end }} -->
-
-                        */}}
-                      {{ .Params.author }}
-                    </li>
-                    <li class="meta-item">
-                      <ul id="tags">
-                          {{/* Comment Here */}}
-                          {{ range .Params.tags }}
-                            <a href="#{{ . | urlize }}" class="anchor-tag">{{ . }}</a>
-                          {{ end }}
-                      </ul>
-                    </li>
+          {{ range $posts.ByDate.Reverse }}
+          <div class="article" data-tag="{{ range .Params.tags }}{{.}} {{ end }}">
+            <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
+            <ul class="blog-post-meta">
+              <li class="meta-item">
+                {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
+                {{ .Date.Format "2006-01-02" }}
+              </li>
+              <li class="meta-item">
+                {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
+                      <!-- {{ range .Params.author }}
+                        <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
+                      {{ end }} -->
+                {{ range .Params.author }} {{ . }}  {{ end }}
+              </li>
+              <li class="meta-item">
+                <ul id="tags">
+                    {{ range $idx, .Params.tags }}
+                      <a href="#{{ . | urlize }}" class="link">{{ . }}</a> |
+                    {{ end }}
                 </ul>
-                <a href="{{ .URL }}">
-                    <div class="brief">
-                         <p>{{ .Params.summary }}</p>
-                    </div>
-                </a>
-                <div class="article_divider"></div>
-            </div>
-            {{ end }}
+              </li>
+            </ul>
+            <a href="{{ .URL }}">
+              <div class="brief">
+                <p>{{ .Params.summary }}</p>
+              </div>
+            </a>
+            <div class="article_divider"></div>
+          </div>
+          {{ end }}
         </div>
     </div>
 </div>
