abstract templates: update tags-nav

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -10,7 +10,7 @@
       <h1 class="title"> Blog </h1>
       <div class="st_tree" id="st_tree">
         {{ $blogs := where (where .Site.Pages "Section" "blog") ".Params.title" "!=" nil }}
-        {{ partial "date-tree-nav.html" (dict "data" $blogs) }}
+        {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
       </div>
     </div>
 
