--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -12,7 +12,7 @@
     <div class="nav nav-tree">
       <h1 class="title"> 文档 </h1>
       <div class="st_tree" id="st-tree">
-        {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
+        {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
       </div>
     </div>
 
