--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -13,7 +13,7 @@
     <div class="nav nav-tree">
       <h1 class="title"> Document </h1>
       <div class="st_tree" id="st-tree">
-        {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_toc "global" .) }}
+        {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_toc "global" .) }}
        </div>
     </div>
 
