--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -11,7 +11,7 @@
       <h1 class="title"> 干货实录 </h1>
       <div class="st_tree" id="doc-nav">
         {{ $blogs := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil }}
-        {{ partial "date-tree-nav.html" (dict "data" $blogs) }}
+        {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
       </div>
     </div>
 
