--- a/layouts/partials/navs/tree-nav.html
+++ b/layouts/partials/navs/tree-nav.html
@@ -2,7 +2,7 @@
   {{range .tree}}
     {{ if isset . "children" }}
       <li><a href="#" class="active">{{ .name }}</a></li>
-        {{ partial "tree-nav.html" (dict "tree" .children "global" $) }}
+        {{ partial "navs/tree-nav.html" (dict "tree" .children "global" $) }}
     {{else}}
     <li>
         <i class="icon"></i>
