--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -9,7 +9,7 @@
             <h1 class="title"> Weekly </h1>
             <div class="st_tree" id="doc-nav">
               {{ $blogs := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil }}
-              {{ partial "date-tree-nav.html" (dict "data" $blogs) }}
+              {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
             </div>
         </div>
 
