--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -60,20 +60,20 @@
       ol,
       ul,
       table {
+        margin: 0.7rem 0;
         line-height: 1.7;
         font-size: 0.7rem;
-        // font-family: 'Lato';
         font-weight: 400;
       }
+
       b,
       optgroup,
       strong {
-        // font-family: 'Lato';
         font-weight: 600;
       }
 
       p {
-        margin: 0.8rem 0;
+        // margin: 0.6rem 0;
         color: @text_color;
       }
       .figure {
@@ -147,18 +147,18 @@
       a {
         color: @theme_blue;
       }
-      pre {
+      pre,
+      code {
+        display: block;
+        margin: 0.7rem 0;
         padding: @horizontal_padding;
         background-color: @gray_white;
         border: 1px solid #ccc;
         font-size: 0.7rem;
         line-height: 1.45;
         .rounded-corners();
+        .f-brk;
         overflow: auto;
-        code {
-          word-break: break-all;
-          word-wrap: break-word;
-        }
       }
       .blog-post-meta {
         padding-left: 0;
