--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -10,66 +10,11 @@
 <div class="blog">
     <div class="container">
       {{ $posts := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
-        <div class="nav nav-tags">
-            <h1 class="title">热门标签 <a class="rss" href="/blog-cn/index.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
-            <a href="#" class="tag all sel">ALL ({{ len $posts }})</a>
-            <div class="tag-list">
-              <!-- Get all posts-->
-              <!-- loop all tags that you've used -->
-              {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                <!-- (re)set the counter to 0 -->
-                {{ $.Scratch.Set "tagCounter" 0 }}
-                <!-- increment counter if post contains the current tag-->
-                  {{ range $posts}}
-                    <!-- Post tags: {{.Params.tags}} -->
-                    {{ if in .Params.tags $name }}
-                      {{ $.Scratch.Add "tagCounter" 1 }}
-                    {{ end }}
-                  {{ end }}
 
-                  {{ $count := $.Scratch.Get "tagCounter" }}
-                  {{ if (gt  $count 1) }}
-                    <!-- hide class for li, if less then 2 -->
-                    <a href="#{{ $name| urlize }}" class="tag" data-tag="{{$name}}">
-                      {{ $name }} ({{ $.Scratch.Get "tagCounter" }})
-                    </a>
-                  {{ end }}
-              {{end}}
-            </div>
-        </div>
-        <div class="list article-list">
-          {{ range $posts.ByDate.Reverse }}
-          <div class="article" data-tag="{{ range .Params.tags }}{{.}} {{ end }}">
-            <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
-            <ul class="blog-post-meta">
-              <li class="meta-item">
-                {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
-                {{ .Date.Format "2006-01-02" }}
-              </li>
-              <li class="meta-item">
-                {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-                      <!-- {{ range .Params.author }}
-                        <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
-                      {{ end }} -->
-                {{ range .Params.author }} {{ . }}  {{ end }}
-              </li>
-              <li class="meta-item">
-                <ul id="tags">
-                    {{ range $idx, .Params.tags }}
-                      <a href="#{{ . | urlize }}" class="link">{{ . }}</a> |
-                    {{ end }}
-                </ul>
-              </li>
-            </ul>
-            <a href="{{ .URL }}">
-              <div class="brief">
-                <p>{{ .Params.summary }}</p>
-              </div>
-            </a>
-            <div class="article_divider"></div>
-          </div>
-          {{ end }}
-        </div>
+      {{ partial "navs/tags-nav.html" (dict "title" "热门标签" "posts" $posts "rss" "/blog-cn/index.xml" "global" .) }}
+
+      {{ partial "list.html" (dict "posts" $posts.ByDate.Reverse "hasMetaData" "true" "hasBrief" "true" "global" .) }}
+      
     </div>
 </div>
 
