--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -11,7 +11,7 @@
             <h1 class="title"> 博客 </h1>
             <div class="st_tree" id="st_tree">
                 {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil }}
-                {{ partial "date-tree-nav.html" (dict "data" $blogs) }}
+                {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
             </div>
         </div>
 
