--- a/layouts/meetup/archive.html
+++ b/layouts/meetup/archive.html
@@ -9,70 +9,8 @@
 {{ $posts := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil  }}
 <div class="meetup">
     <div class="container">
-        <div class="nav nav-tags">
-            <h1 class="title">热门标签</h1>
-            <a href="/meetup" class="all">ALL ({{ len $posts }})</a>
-            <ul class="tag-list">
-                <!-- Get all posts-->
-              <!-- loop all tags that you've used -->
-              {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                <!-- (re)set the counter to 0 -->
-                {{ $.Scratch.Set "tagCounter" 0 }}
-                <!-- increment counter if post contains the current tag-->
-                <!-- tag name: {{ $name }}, {{$taxonomy}} -->
-                {{ range $posts}}
-                <!-- Post tags: {{.Params.tags}} -->
-                  {{ if in .Params.tags $name }}
-                    {{ $.Scratch.Add "tagCounter" 1 }}
-                  {{ end }}
-                {{ end }}
-                <!-- {{ $name }} -->
-                    {{ if $.Scratch.Get "tagCounter" }}
-                    <!-- hide class for li, if less then 2 -->
-                      <li class="">
-                        <a href="{{ $name }}" class="tag">
-                          {{ $name }} ({{ $.Scratch.Get "tagCounter" }})</a>
-                      </li>
-                    {{ end }}
-              {{end}}
-            </ul>
-        </div>
-        <div class="list">
-            {{ range $posts.ByDate.Reverse }}
-              <!-- <li><h2>{{ .Title }}</h2></li> -->
-                <!-- {{ .Render "li"}} -->
-            <div class="article">
-                <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
-                <ul class="blog-post-meta">
-                    <li class="meta-item">
-                        {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
-                        {{ .Date.Format "2006-01-02" }}
-                    </li>
-                    <li class="meta-item">
-                      {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-                      <!-- {{ range .Params.author }}
-                        <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
-                      {{ end }} -->
-                      <!-- {{ range .Params.author }} {{ . }}  {{ end }} -->
-                      {{ .Params.author }}
-                    </li>
-                    <li class="meta-item">
-                      <ul id="tags">
-                        {{ range .Params.tags }}
-                          <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-                        {{ end }}
-                      </ul>
-                    </li>
-                </ul>
-                <a href="{{ .URL }}">
-                    <div class="brief">
-                         <p>{{ .Params.summary }}</p>
-                    </div>
-                </a>
-                <div class="article_divider"></div>
-            </div>
-            {{ end }}
-        </div>
+        {{ partial "navs/tags-nav.html" (dict "title" "Popular Tags" "posts" $posts "global" .) }}
+        {{ partial "list.html" (dict "posts" $posts.ByDate.Reverse "hasMetaData" "true" "hasBrief" "true" "global" .) }}
     </div>
 </div>
 
