--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -9,9 +9,9 @@
     <div class="container">
         <div class="nav nav-tree">
             <h1 class="title"> Weekly <a class="rss" href="/weekly/index.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
-            <div class="st_tree" id="st_tree">
-                {{ $archives := where ( .Data.Pages ) ".Params.title" "!=" nil }}
-                {{ partial "date-tree-nav.html" (dict "data" $archives) }}
+            <div class="st_tree" id="st-tree">
+                {{ $archives := where ( where .Site.Pages "Section" "weekly" ) ".Params.title" "!=" nil }}
+                {{ partial "navs/date-tree-nav.html" (dict "data" $archives) }}
             </div>
         </div>
         <div class="archive">
